--- a/rebar.config
+++ b/rebar.config
@@ -17,5 +17,7 @@
 {deps_dir, ["deps"]}.
 {deps, [
   {lager,       ".*",   {git, "git://github.com/basho/lager.git",
-                          {tag, "2.0.3"}}}
+                          {tag, "2.0.3"}}},
+  {poolboy,     ".*",   {git, "git://github.com/devinus/poolboy.git",
+                          {tag, "1.1.0"}}}
 ]}.
