--- a/rebar.config
+++ b/rebar.config
@@ -19,5 +19,7 @@
   {lager,       ".*",   {git, "git://github.com/basho/lager.git",
                           {tag, "2.0.3"}}},
   {poolboy,     ".*",   {git, "git://github.com/devinus/poolboy.git",
-                          {tag, "1.1.0"}}}
+                          {tag, "1.1.0"}}},
+  {jsx,         ".*",   {git, "git://github.com/talentdeficit/jsx.git",
+                          {tag, "v1.4.5"}}}
 ]}.
