--- a/rebar.config
+++ b/rebar.config
@@ -16,10 +16,9 @@
 
 {deps_dir, ["deps"]}.
 {deps, [
-  {lager,       ".*",   {git, "git://github.com/basho/lager.git",
-                          {tag, "2.0.3"}}},
-  {poolboy,     ".*",   {git, "git://github.com/devinus/poolboy.git",
+  {lager_json_formatter, ".*",
+    {git, "https://github.com/pack/lager_json_formatter.git",
+                          {branch, "master"}}},
+  {poolboy, ".*",   {git, "git://github.com/devinus/poolboy.git",
                           {tag, "1.1.0"}}},
-  {jsx,         ".*",   {git, "git://github.com/talentdeficit/jsx.git",
-                          {tag, "v1.4.5"}}}
 ]}.
