--- a/rebar.config
+++ b/rebar.config
@@ -20,5 +20,5 @@
     {git, "https://github.com/pack/lager_json_formatter.git",
                           {branch, "master"}}},
   {poolboy, ".*",   {git, "git://github.com/devinus/poolboy.git",
-                          {tag, "1.1.0"}}},
+                          {tag, "1.1.0"}}}
 ]}.
